Fixed spacing a bit

--- a/src/styles.css
+++ b/src/styles.css
@@ -1039,6 +1039,10 @@ select {
   margin-top: 1.75rem;
 }
 
+.-mt-3 {
+  margin-top: -0.75rem;
+}
+
 .block {
   display: block;
 }
